# proto

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  array.c  config.h.in  configure.ac  data_types.c  functions.c  object.c  proto.c  proto.def  proto.h  proto.pc.in
tests/: .gitignore  Makefile  Makefile.am
tests/scripts/: run.py  valgrind.py
tests/suites/: test_arrays.c  test_data_types.c  test_generic_caller.c  test_objects.c  utils.h
